[gd_scene load_steps=61 format=3 uid="uid://c7ofqdsl5bpcl"]

[ext_resource type="Script" path="res://scenes/knight_class.gd" id="1_0p8o6"]
[ext_resource type="Texture2D" uid="uid://pg6anpcmmywg" path="res://assets/Characters/Heroes/Knight/Death/Death-Sheet.png" id="2_muccy"]
[ext_resource type="Texture2D" uid="uid://dbvn7oc713r4r" path="res://assets/Characters/Heroes/Knight/Idle/Idle-Sheet.png" id="3_b46i0"]
[ext_resource type="Texture2D" uid="uid://d2ytn7mh0ttxn" path="res://assets/Characters/Heroes/Knight/Run/Run-Sheet.png" id="4_y2vm0"]
[ext_resource type="PackedScene" uid="uid://bivtb7t8wxsss" path="res://scenes/weapon.tscn" id="5_fw6hd"]
[ext_resource type="PackedScene" uid="uid://7eau6st5wqsw" path="res://scenes/bone_sword.tscn" id="6_e04u4"]
[ext_resource type="PackedScene" uid="uid://1ibacw41nlvo" path="res://scenes/knight_aura.tscn" id="7_eaeip"]
[ext_resource type="PackedScene" uid="uid://s4um51873xxx" path="res://scenes/Common/hurt_box_component.tscn" id="8_wunlu"]
[ext_resource type="PackedScene" uid="uid://cy5bxnxrpb5xs" path="res://scenes/Common/health_component.tscn" id="9_jipyf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2568d"]
atlas = ExtResource("2_muccy")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pdl1"]
atlas = ExtResource("2_muccy")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_01rsg"]
atlas = ExtResource("2_muccy")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x12gx"]
atlas = ExtResource("2_muccy")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xn0f5"]
atlas = ExtResource("2_muccy")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_afamh"]
atlas = ExtResource("2_muccy")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nl2b"]
atlas = ExtResource("3_b46i0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a7sb"]
atlas = ExtResource("3_b46i0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bpkp"]
atlas = ExtResource("3_b46i0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udf7x"]
atlas = ExtResource("3_b46i0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pimcb"]
atlas = ExtResource("4_y2vm0")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nddpa"]
atlas = ExtResource("4_y2vm0")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ojuq"]
atlas = ExtResource("4_y2vm0")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l1wj"]
atlas = ExtResource("4_y2vm0")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bac45"]
atlas = ExtResource("4_y2vm0")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwuwv"]
atlas = ExtResource("4_y2vm0")
region = Rect2(320, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qpf8d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2568d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pdl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_01rsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x12gx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn0f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afamh")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nl2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a7sb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bpkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udf7x")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pimcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nddpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ojuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l1wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bac45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwuwv")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r42vn"]
animation = &"DeadLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8dyng"]
animation = &"DeadRight"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_gj56l"]
blend_point_0/node = SubResource("AnimationNodeAnimation_r42vn")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_8dyng")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7okbp"]
animation = &"HurtLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h4jmg"]
animation = &"HurtRight"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_qurbq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_7okbp")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_h4jmg")
blend_point_1/pos = 0.5
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_mncke"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pyrjq"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_p5gs2"]
blend_point_0/node = SubResource("AnimationNodeAnimation_mncke")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_pyrjq")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_433cn"]
animation = &"MoveLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tsqet"]
animation = &"MoveRight"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_c5yyf"]
blend_point_0/node = SubResource("AnimationNodeAnimation_433cn")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_tsqet")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_y2cjf"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_20cgd"]
advance_mode = 2
advance_expression = "state == IDLE"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jlt40"]
advance_mode = 2
advance_expression = "state == MOVING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nlkdn"]
advance_mode = 2
advance_expression = "state == HURT"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_13m8m"]
advance_mode = 2
advance_expression = "state == HURT"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oak6e"]
switch_mode = 2
advance_mode = 2
advance_expression = "state == DEAD"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g3x8m"]
switch_mode = 2
advance_mode = 2
advance_expression = "state == MOVING"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8b4lf"]
switch_mode = 2
advance_mode = 2
advance_expression = "state == IDLE"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mwflt"]
states/Death/node = SubResource("AnimationNodeBlendSpace1D_gj56l")
states/Death/position = Vector2(865, 109)
states/End/position = Vector2(1184, 100)
states/Hurt/node = SubResource("AnimationNodeBlendSpace1D_qurbq")
states/Hurt/position = Vector2(614, 109)
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_p5gs2")
states/Idle/position = Vector2(394, 162)
states/Move/node = SubResource("AnimationNodeBlendSpace1D_c5yyf")
states/Move/position = Vector2(394, 45)
states/Start/position = Vector2(154, 109)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_y2cjf"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_20cgd"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_jlt40"), "Move", "Hurt", SubResource("AnimationNodeStateMachineTransition_nlkdn"), "Idle", "Hurt", SubResource("AnimationNodeStateMachineTransition_13m8m"), "Hurt", "Death", SubResource("AnimationNodeStateMachineTransition_oak6e"), "Hurt", "Move", SubResource("AnimationNodeStateMachineTransition_g3x8m"), "Hurt", "Idle", SubResource("AnimationNodeStateMachineTransition_8b4lf")]

[sub_resource type="Animation" id="Animation_k2g28"]
resource_name = "DeadLeft"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_1rq16"]
resource_name = "DeadRight"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Dead"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_gw37s"]
resource_name = "HurtLeft"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteAnimations:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_process"
}]
}

[sub_resource type="Animation" id="Animation_1guiu"]
resource_name = "HurtRight"
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SpriteAnimations:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true],
"method": &"set_process"
}]
}

[sub_resource type="Animation" id="Animation_qnvoc"]
resource_name = "IdleLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hw4qr"]
resource_name = "IdleRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_a5p1c"]
resource_name = "MoveLeft"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n0v1j"]
resource_name = "MoveRight"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Weapon:z_index")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}

[sub_resource type="Animation" id="Animation_alscg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteAnimations:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteAnimations:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteAnimations:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vli0o"]
_data = {
"DeadLeft": SubResource("Animation_k2g28"),
"DeadRight": SubResource("Animation_1rq16"),
"HurtLeft": SubResource("Animation_gw37s"),
"HurtRight": SubResource("Animation_1guiu"),
"IdleLeft": SubResource("Animation_qnvoc"),
"IdleRight": SubResource("Animation_hw4qr"),
"MoveLeft": SubResource("Animation_a5p1c"),
"MoveRight": SubResource("Animation_n0v1j"),
"RESET": SubResource("Animation_alscg")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ncqev"]
radius = 2.5
height = 32.5826

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pr0tq"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_se78c"]
radius = 6.0
height = 16.0

[node name="KnightClass" type="CharacterBody2D"]
script = ExtResource("1_0p8o6")

[node name="SpriteAnimations" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_qpf8d")
animation = &"Move"
frame = 1
flip_h = true

[node name="SpriteAnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mwflt")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../SpriteAnimationPlayer")
parameters/Death/blend_position = -0.362319
parameters/Hurt/blend_position = -0.0694126
parameters/Idle/blend_position = 0.273837
parameters/Move/blend_position = -0.385202

[node name="SpriteAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vli0o")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="Weapon" parent="." instance=ExtResource("5_fw6hd")]
position = Vector2(9.53674e-07, -12)
scale = Vector2(0.8, 0.8)

[node name="BoneSword" parent="Weapon" instance=ExtResource("6_e04u4")]
position = Vector2(8.75, 0)

[node name="CollisionShape2D" parent="Weapon/BoneSword" index="5"]
position = Vector2(35, -2.5)
rotation = 4.62129
shape = SubResource("CapsuleShape2D_ncqev")

[node name="CharacterCollision" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 4
position = Vector2(1, -15)
shape = SubResource("CapsuleShape2D_pr0tq")

[node name="KnightAura" parent="." instance=ExtResource("7_eaeip")]
position = Vector2(1, -13)

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("HealthComponent") instance=ExtResource("8_wunlu")]
collision_layer = 2
collision_mask = 4
HealthComponent = NodePath("../HealthComponent")

[node name="HurtShape" parent="HurtBoxComponent" index="0"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_se78c")

[node name="HealthComponent" parent="." instance=ExtResource("9_jipyf")]
HitPoints = 100.0

[connection signal="hurt" from="HurtBoxComponent" to="." method="_on_hurt_box_component_hurt"]

[editable path="Weapon/BoneSword"]
[editable path="Weapon/BoneSword/HitboxComponent"]
[editable path="HurtBoxComponent"]
